overflow bug fix

--- a/src/app/events/event/form/form.component.css
+++ b/src/app/events/event/form/form.component.css
@@ -3,6 +3,9 @@ form.normal-form {
   margin: 2%;
   overflow: auto;
 }
+mat-grid-tile{
+  overflow-y: scroll;
+}
 .controls-container {
   width: 100%;
   padding: 5%;
